--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-addons-shallow-compare": "15.3.2",
     "react-dom": "15.4.1",
     "react-helmet": "4.0.0",
+    "react-notifications": "1.4.3",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
